<resources>
    <string name="app_name">Fertileasy</string>
    <string name="title_activity_login">Fertileasy</string>
    <string name="Bancada">Acompanhamento   %s</string>
    <string name="BancadaConfigActivity">Bancada %d</string>
    <string name="Bancadadata">%1$s, %2$s de %3$s de %4$s</string>
    <string name="Bancadahora">%1$s:%2$s</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="ohm">&#937;</string>
    <string name="degreescelsius">&#8451;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="lista_de_bancadas">Lista de Bancadas</string>
    <string name="valores_recentes">Valores Recentes</string>
    <string name="historico">Historico</string>
    <string name="options">Options</string>
    <string name="logout">Logout</string>
    <string name="quit">Quit</string>
    <string name="www_devmedia_com_br">www.devmedia.com.br</string>
    <string name="fertileasy_logo">Fertileasy logo</string>
    <string name="login">Login</string>
    <string name="adicionar_bancadas">ADICIONAR BANCADAS:</string>
    <string name="in_cio_do_dia">Início do dia:</string>
    <string name="tipo_de_bancada">Tipo de Bancada:</string>
    <string name="cultura">Cultura:</string>
    <string name="data_de_cultivo">Data de Cultivo:</string>
    <string name="concentra_o">Concentração:</string>
    <string name="configura_o_do_temporizador">Configuração do Temporizador</string>
    <string name="fim_do_dia">Fim do dia:</string>
    <string name="tempo_ligado">Tempo Ligado:</string>
    <string name="tempo_desligado">Tempo Desligado:</string>
    <string name="ciclos_noturnos">Ciclos Noturnos:</string>
    <string name="datadecultivo_logo">DatadeCultivo logo</string>
    <string name="in_ciododia_logo">IníciodoDia logo</string>
    <string name="fimdodia_logo">FimdoDia logo</string>
    <string name="tempoligado_logo">TempoLigado Logo</string>
    <string name="tempodesligado_logo">TempoDesligado logo</string>
    <string name="data">Data:</string>
    <string name="hora">Hora:</string>
    <string name="idade">Idade:</string>
    <string name="temperatura_da_gua">Temperatura da Água:</string>
    <string name="exportar">EXPORTAR</string>
    <string name="line_1">Line 1</string>
    <string name="fertileasy_icon">Fertileasy Icon</string>
    <string name="line_2">Line 2</string>
    <string name="atualizar">Atualizar</string>
    <string name="list_delete_icon">List Delete Icon</string>
    <string name="user_picture">User Picture</string>
    <string name="usu_rio_n_o_autenticado">Usuário não autenticado</string>
    <string name="senha_da_rede_local">Senha da rede local</string>
    <string name="nome_da_rede">Nome da Rede</string>
    <string name="senha">Senha:</string>
    <string name="number_2">Number 2</string>
    <string name="rede_esp32">Rede ESP32</string>
    <string name="ssid">SSID:</string>
    <string name="conectar">Conectar</string>
    <string name="desconectar">Desconectar</string>
    <string name="avan_ar">Avançar</string>
    <string name="voltar">Voltar</string>
    <string name="qr_code">QR Code:</string>
    <string name="config_ESP32">Internet</string>
    <string name="configurar_esp_32">Credenciais Rede Wi-Fi</string>
</resources>
